# scout-attention

./: CMakeLists.txt  README.md
include/: common.cuh  scout_config.cuh  tile_config.cuh
src/: naive_attention.cu  naive_attention.cuh  scout_attention.cu  scout_attention.cuh  scout_score.cu  scout_score.cuh  tiled_attention.cu  tiled_attention.cuh
tests/: test_correctness.cu
